<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.key.beekeepernote.activities.LoginActivity">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="TextView" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_acebook"
        android:elevation="3dp"
        android:visibility="visible"
        app:layout_anchor="@+id/imageBackgroundDown"
        app:layout_anchorGravity="right|center_vertical" />

    <Button
        android:id="@+id/buttonGoogleLogin"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/ic_google"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_anchor="@+id/imageBackgroundDown"
        app:layout_anchorGravity="left|center_vertical" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userAcountImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="2dp"
        android:src="@drawable/user_default"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"
        app:layout_anchor="@+id/imageBeckground"
        app:layout_anchorGravity="bottom|center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageBeckground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srcCompat="@color/colorPrimary" />

        <ImageView
            android:id="@+id/imageBackgroundDown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srcCompat="@android:color/holo_orange_dark" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookButton"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="Log Out"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonCreateNewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="Create new Account"
                    android:textAllCaps="false"
                    android:textColor="@color/common_google_signin_btn_text_light_pressed"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonGoogleLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Google Log Out"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

    <!-- Login progress -->

</android.support.design.widget.CoordinatorLayout>
